定义几个接口